--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>testing</title>
+	<title>feelings fm</title>
+	<link rel="stylesheet" type="text/css" href="'{{ url_for('static',filename='stylesheet.css')}}'"/>
 </head>
 <body>
+	<div class="center">
 	<div id="content">
+		<h1>play yr feelings</h1>
 		<form role="form" action="/player" method="post">
 	      <textarea id="feels" name="feels" rows="8"></textarea>
-	    <button type="submit">Submit</button>
+	    <button type="submit">go</button>
       	</form>
 	</div>
 	<div id="player">
@@ -15,6 +18,7 @@
 	<p>yr feels</p><br />
 		<iframe src="https://embed.spotify.com/?uri=spotify:trackset:yrfeels:{{songids}}" frameborder="0" allowtransparency="true"></iframe>
 	{% endif %}
+	</div>
 	</div>
 </body>
 </html>
