--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 	<title>feelings fm</title>
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='stylesheet.css')}}"/>
+	<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='stylesheet.css')}}"/>
 </head>
 <body>
-	<div class="center">
+	<div class="center" id ="container">
 		<div id="content">
-			<h1>play yr feelings</h1>
-			<form role="form" action="/" method="post">
-		    <textarea id="feels" name="feels" rows="8"></textarea><br />
-		    <button type="submit">go</button>
+			<h1>FEELINGS FM</h1>
+			<form action="/" method="post">
+		    <textarea type="text" id="feels" name="feels" rows="8" placeholder="how are you feeling?"></textarea><br />
+		    <button type="submit">make playlist</button>
 	    </form>
 		</div>
 		<div id="player">
