--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,9 @@
 			<iframe src="https://embed.spotify.com/?uri=spotify:trackset:yrfeels:{{songids}}" frameborder="0" allowtransparency="true"></iframe>
 		{% endif %}
 		</div>
+		<div id="footer">
+			<p>made with <a href="http://the.echonest.com/">the echo nest</a> and <a href="http://spotify.com/">spotify</a> | <a href="https://github.com/amandapickering/feelingsfm">source</a>
+		</div>
 	</div>
 </body>
 </html>
